--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.0.14",
     "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.8",
-    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
-    "router-dom": "^2.2.11"
+    "react-simple-widgets": "^6.7.0",
+    "router-dom": "^2.2.11",
+    "validator": "^13.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
