--- a/package.json
+++ b/package.json
@@ -10,18 +10,34 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fontsource/poppins": "^5.0.14",
+    "@hookform/resolvers": "^3.6.0",
+    "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "flowbite-react": "^0.9.0",
+    "primereact": "^10.6.6",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.1.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.3",
     "react-simple-widgets": "^6.7.0",
+    "react-spinners": "^0.14.1",
+    "redux": "^5.0.1",
     "router-dom": "^2.2.11",
-    "validator": "^13.11.0"
+    "styled-components": "^6.1.11",
+    "validator": "^13.11.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
